syntax = "proto3";

package modules.assets.internal.transactions.renumerate;

import "gogoproto/gogo.proto";

option go_package = "github.com/persistenceOne/persistenceSDK/modules/assets/internal/transactions/renumerate";

message Message {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;


  string from = 1 [(gogoproto.customtype) = "github.com/persistenceOne/persistenceSDK/schema/types/base.AccAddress", (gogoproto.nullable) = false, (gogoproto.moretags) = "valid:\"required~required field From missing\""] ;
  string from_i_d = 2 [(gogoproto.customtype) = "github.com/persistenceOne/persistenceSDK/schema/types.ID", (gogoproto.nullable) = false, (gogoproto.moretags) = "valid:\"required~required field FromID missing\""] ;
  string asset_i_d = 3 [(gogoproto.customtype) = "github.com/persistenceOne/persistenceSDK/schema/types.ID", (gogoproto.nullable) = false, (gogoproto.moretags) = "valid:\"required~required field AssetID missing\""];
}

message TransactionResponse{}

service Msg{
  rpc Renumerate(Message) returns (TransactionResponse);
}